tests/NormalTests/paczka1/small_fuzzy/57385851.err
Error in line 1: Wr9bgsUWW S583 71,7
Error in line 9: BQv S62± 114,0
Error in line 4: gIbeq A522 64,0
Error in line 7: BQv S623 64,4
